Wed Feb  5 20:18:33 1997  Richard Basch  <basch@lehman.com>

	* profile.hin: Do not process the contents of profile.h
		(or the profile.hin subset) more than once.

	* test_parse.c:
		Do not include "com_err.h" (conflicting errcode_t definition)

	* Makefile.in:
		Fixed typo (all-max -> all-mac)
		Inconsistent colon usage; all-windows needed :: not :

Mon Nov  4 17:04:51 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* prof_parse.c (parse_std_line): Accept either ';' or '#' on the
		first line of a string as a comment character.

Fri Jul 12 20:28:49 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (CFLAGS): On Windows builds, add -DHAVE_STDLIB_H

Mon Jun 24 09:37:26 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* prof_file.c, prof_init.c, prof_parse.c, prof_section.c,
		prof_tree.c, test_parse.c, test_profile.c, configure.in:
		Only include stdlib.h if it's available.

Thu Jun 13 22:13:51 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* configure.in: remove ref to ET_RULES

Mon Jun 10 17:35:02 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* test_profile.c: Add usage message if not enough arguments.

	* prof_parse.c (dump_profile_to_file, dump_profile): Dump the
 		profile using the correct line terminator for Windows,
 		Macintosh, etc.

	* prof_parse.c:
	* prof_file.c: Change _WINDOWS to _MSDOS, and add check for _WIN32.

	* prof_int.h: Add size #defines for _WIN32.  Handle prototypes
		correctly for _WIN32.

Fri Feb 16 15:18:17 1996    <tytso@rsts-11.mit.edu>

	* prof_int.h: Added comment to profile state structure

Wed Feb 14 16:43:48 1996    <tytso@rsts-11.mit.edu>

	* prof_parse.c (parse_std_line): Make parsing more flexible, so we
		don't barf over lack of spaces around the equals sign.

Tue Dec 12 19:18:14 1995  Mark Eichin  <eichin@cygnus.com>

	* krb5.conf: use host:portnum in example files, not host,portnum.

Fri Jan  5 09:04:20 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* profile.hin: Add profile_init_path prototype
